# Technische-Alternative-CMI

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: cron.yaml  pull.yml  push.yml
custom_components/ta_cmi/: __init__.py  binary_sensor.py  config_flow.py  const.py  device_parser.py  diagnostics.py  manifest.json  sensor.py  strings.json
custom_components/ta_cmi/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_sensor.py
