[project]
name = "tacmi"
version = "1.12.0"
description = "This integration monitors the inputs and outputs of the devices connected to a C.M.I."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
maintainers = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
requires-python = ">=3.13.2"
keywords = [
    "homeassistant",
    "c.m.i.",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ta-cmi==3.6.0",
]

[project.urls]
homepage = "https://github.com/DeerMaximum/Technische-Alternative-CMI"
repository = "https://github.com/DeerMaximum/Technische-Alternative-CMI"

[dependency-groups]
dev = [
    "aiohttp_cors~=0.8.1",
    "homeassistant==2026.2.0b1",
    "pytest-homeassistant-custom-component"
]
lint = [
    "ruff>=0.14.10"
]

[tool.ruff]
preview = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.uv]
default-groups = "all"